--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <meta charset="utf-8">
 
 <head>
-  <script id="main_js" type="text/javascript" src="https://dani0001414.github.io/TheVRMobilMenetrend/javascript_code.js"></script>
+  <script id="main_js" type="text/javascript" src="/javascript_code.js"></script>
 </head>
 
 <body link="grey" vlink="grey" style="font-family:'Roboto', sans-serif; background: #0e0c13; height:100%; color: #c3c1c8">
