--- a/index.html
+++ b/index.html
@@ -1,106 +1,20 @@
 ﻿<html>
-<link rel="manifest" href="manifest.webmanifest">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<style type='text/css'>
-  @font-face {
-    font-family: 'Covenant';
-    src: url(data:application/x-font-woff;charset=utf-8;base64,) format('woff');
-    font-weight: normal;
-    font-style: normal;
-  }
-
-  /* The Modal (background) */
-
-  .modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    padding-top: 100px;
-    /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
-  }
-
-  /* Modal Content */ 
-  
-  .modal-content {
-    background-color: #17141f;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-  }
-
-  /* The Close Button */
-
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  .cookie {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    /* Location of the box */
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    /* Full width */
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
-  }
-
-  /* Modal Content */
-
-  .modal-cookie {
-    background-color: #2e2b35;
-    margin: auto;
-    padding: 20px;
-  }
-</style>
-<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/9KP46NF.png">
-<title>Mobilbarát Menetrend</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta charset="utf-8">
 
 <head>
+  <link rel="manifest" href="manifest.webmanifest">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" type="image/png" href="Saját ikon elérési útja.">
+  <title>Mobilbarát Menetrend</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta charset="utf-8">
+  <script id="streamerdata_js" type="text/javascript" src="streamerdata.js"></script>
   <script id="main_js" type="text/javascript" src="javascript_code.js"></script>
 </head>
 
-<body link="grey" vlink="grey" style="font-family:'Roboto', sans-serif; background: #0e0c13; height:100%; color: #c3c1c8">
+<body link="grey" vlink="grey" style="font-family:'Roboto', sans-serif; background: #0e0c13; height:100%; color: #c3c1c8;">
   <center>
     <div style="display: block;" id="no_stream">
     </div>
@@ -345,7 +259,7 @@
         A MobilBarát Menetrend egyes funkcióihoz saját(Témaválasztó, Új funkciók jelzése) illetve harmadik fél általi(Google Analytics)
         Cookie-kat használ a későbbi fejlesztések segítése érdekében!
         <br>
-        <span style="cursor: pointer; color: grey; text-decoration: underline;" onclick="createcookie('thevrmmcookiepolicysagreement',1,365,'banner')">Elfogadom</span>
+        <span id="CookieAccept" style="cursor: pointer; color: grey; text-decoration: underline;">Elfogadom</span>
         <span style="cursor: pointer; color: grey; text-decoration: underline;" onclick="deleteAllCookies('banner')">Nem fogadom el</span>
         <span style="cursor: pointer; color: grey; text-decoration: underline;" onclick="modal_open('cookie_information')">Bővebb információ</span>
       </div>
@@ -360,27 +274,5 @@
     </div>
   </center>
 </body>
-<script>
-  function clean() {
-    var d = new Date();
-    var honapnap = ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"];
-    var dat = honapnap[d.getDate()];
-    dat = dat / 5;
-    var dat_fixed = dat.toFixed(0);
-    var clean = false;
-    if ((dat_fixed - dat) == 0) { clean = true; };
-    return clean;
-  }
-
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('thevrmm_sw.js').then(function (registration) {
-      console.log('Service worker registration succeeded:', registration);
-    }).catch(function (error) {
-      console.log('Service worker registration failed:', error);
-    });
-  } else {
-    console.log('Service workers are not supported.');
-  } 
-</script>
 
 </html>
