--- a/index.html
+++ b/index.html
@@ -274,5 +274,15 @@
     </div>
   </center>
 </body>
-
+<script>
+   if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('streamer_sw.js').then(function (registration) {
+      console.log('Service worker registration succeeded:', registration);
+    }).catch(function (error) {
+      console.log('Service worker registration failed:', error);
+    });
+  } else {
+    console.log('Service workers are not supported.');
+  } 
+</script>
 </html>
