--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </body>
 <script>
    if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('streamer_sw.js').then(function (registration) {
+    navigator.serviceWorker.register('streamer_sw2.js').then(function (registration) {
       console.log('Service worker registration succeeded:', registration);
     }).catch(function (error) {
       console.log('Service worker registration failed:', error);
