--- a/DanX27_4/index.html
+++ b/DanX27_4/index.html
@@ -52,7 +52,7 @@ function HttpErrorPost(url, params, callback) {
     }
 }
   </script>
-  <script id="main_js" type="text/javascript" src="https://dani0001414.github.io/blyyyplaysmm/tata-ratata.js"></script>
+  <script id="main_js" type="text/javascript" src="https://dani0001414.github.io/blyyyplaysmm/tata.js"></script>
 </head>
 
 <body link="grey" vlink="grey"
