--- a/DanX27/mm.html
+++ b/DanX27/mm.html
@@ -65,7 +65,7 @@
 </body>
 <script>
    if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('thevrmm_sw.js').then(function (registration) {
+    navigator.serviceWorker.register('streamer_sw.js').then(function (registration) {
       console.log('Service worker registration succeeded:', registration);
     }).catch(function (error) {
       console.log('Service worker registration failed:', error);
