--- a/teszt/mupload.html
+++ b/teszt/mupload.html
@@ -1,9 +1,24 @@
 <script>
     window.onload = (event) => {
-
 document.getElementById("urlhref").setAttribute('value',window.location.href);
- }
+
+var url = "https://mobilmenetrend.000webhostapp.com/stream_schedule.json";
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function () {
+        if (this.readyState == 4 && this.status == 200) {
+            document.getElementsByClassName("content")[0].innerHTML = xhttp.responseText;
+           
+        }
+    };
+    xhttp.open("GET", url, true);
+    xhttp.send();
+}
+
+ 
     </script>
+    <B>Json string tartalma jelenleg:</B>
+    <div class="content"></div>
+
 <form action="https://mobilmenetrend.000webhostapp.com/test.php" method="post">
     Cím:<br><input type="text" name="title" value=""><br>
     Leírás:<br><input type="text" name="description" value=""><br>
