--- a/teszt/mupload.html
+++ b/teszt/mupload.html
@@ -6,7 +6,9 @@ var url = "https://mobilmenetrend.000webhostapp.com/stream_schedule.json";
     var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function () {
         if (this.readyState == 4 && this.status == 200) {
-            document.getElementsByClassName("content")[0].innerHTML = xhttp.responseText;
+            var content = xhttp.responseText;
+            content.normalize();
+            document.getElementsByClassName("content")[0].innerHTML = content;
            
         }
     };
