--- a/teszt/mupload.html
+++ b/teszt/mupload.html
@@ -1,4 +1,8 @@
 <script>
+    function encode_utf8( s ){
+    return unescape( encodeURIComponent( s ) );
+}( '\u4e0a\u6d77' )
+
     window.onload = (event) => {
 document.getElementById("urlhref").setAttribute('value',window.location.href);
 
@@ -7,7 +11,7 @@ var url = "https://mobilmenetrend.000webhostapp.com/stream_schedule.json";
     xhttp.onreadystatechange = function () {
         if (this.readyState == 4 && this.status == 200) {
             var content = xhttp.responseText;
-            content.normalize();
+            content = encode_utf8(content);
             document.getElementsByClassName("content")[0].innerHTML = content;
            
         }
